2013-01-18  Alex Tutubalin <lexa@lexa.ru>
   * Support for Imacon Ixpress 39Mpix Multi-shot files

2012-12-24  Alex Tutubalin <lexa@lexa.ru>
   * Dcraw 9.17 imported, support for new cameras:
     Canon 6D and EOS M, Casio EX-ZR100, Fujifilm X-E1, Leica D-LUX6 and
     V-LUX4, Nikon P7700, Olympus XZ-2, Panasonic G5, Samsung EX2F,
     Sony RX-1
   * New API call LibRaw::is_fuji_rotated() returns true for files
     needs 'fuji_rotate()' call on postprocessing.
   * LibRaw 0.15.0-Beta3


2012-12-03  Alex Tutubalin <lexa@lexa.ru>

   * Preliminary support for new cameras:
     Canon: G15, S110, SX50
     Fujifilm: F800EXR, XF1
     Nikon: 1 J2, 1 V2, D600
     Olympus: E-PL5, E-PM2
     Panasonic: FZ200, GH3, LX7
     Pentax: K-5 II, K-5 IIs, K-30, Q10
     Sony: SLT-A99, NEX-5R, NEX-6

   * LibRaw::subtract_black() return type is now integer. Function returns
     errorcode according to libraw error conversion.

   * New processing stage LIBRAW_PROGRESS_RAW2_IMAGE (this flag is set
     by LibRaw::raw2image() call)

   * New warning flag LIBRAW_WARN_RAWSPEED_PROCESSED
     - not really a warning, but information that RawSpeed library was used 
	for image decoding.

   * imgdata.rawdata.color_image is now split to two pointers:
      - ushort (*)[3] color3_image for 3-component RAW images (color DNGs,
        sRAW)
      - ushort (*)[4] color4_image for 4-component color raws (Sinar 4shot,
        Kodak RAWs and so on).

   * imgdata.idata.sizes.raw_pitch is now in *bytes*
     This value should be used for access rows in imgdata.rawdata.*_image 
     buffers.

   * Enabled RawSpeed processing for non-bayer DNGs and sRAW.
     Note: there is a bug in RawStudio r499, 3-color (linear) uncompressed DNGs
     are read incorrectly. Filed to RawStudio bugzilla
     Use RawSpeed/rawspeed.uncompressed-color-dng.patch until this bug is not
     fixed in main RawSpeed source repository.

   * Removed OpenMP support for linear interpolation because of problems