@@ -138,6 +138,7 @@ enum LibRaw_errors
     LIBRAW_OUT_OF_ORDER_CALL=-4,
     LIBRAW_NO_THUMBNAIL=-5,
     LIBRAW_UNSUPPORTED_THUMBNAIL=-6,
+	LIBRAW_INPUT_CLOSED=-7,
     LIBRAW_UNSUFFICIENT_MEMORY=-100007,
     LIBRAW_DATA_ERROR=-100008,
     LIBRAW_IO_ERROR=-100009,
